fixed photo entry toggle text  button layout issue; outsourced photo entry control panel to a separate component

--- a/src/components/Timestamp.css
+++ b/src/components/Timestamp.css
@@ -17,6 +17,7 @@
 }
 /* timestamp container for photo info modal */
 .timestamp-container--photo-info {
+  border-top: 1px solid var(--bg-color--secondary);
   height: 50px;
 }
 .timestamp-content { 
